<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity"
    android:background="@drawable/qbg21">


    <TextView
        android:id="@+id/textviewscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:text="@string/score_0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textviewqcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="21dp"
        android:text="@string/question_1_x"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textviewquestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radiogroup"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="69dp"
        android:text="@string/question_1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp">

        <RadioButton
            android:id="@+id/rd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_4"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnsubmitnext"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:layout_centerInParent="true"
        android:layout_marginTop="52dp"
        android:width="10dp"
        android:background="@drawable/custome_button"
        android:text="@string/submit" />

</RelativeLayout>
