<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/qbg3"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/its_quizzzy_time"
        android:textColor="#EFECEC"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:text="@string/highest_score_0"
        android:textColor="#EFECEC"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/startbtn"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:width="10dp"
        android:background="@drawable/custome_button"
        android:text="@string/start_quiz" />
</RelativeLayout>